# projet3Poly

./: .gitignore  CMakeLists.txt  RapportTest.docx
src/app/heavy-client/: CMakeLists.txt
src/app/heavy-client/model/: CMakeLists.txt  FacadeInterfaceNative.cpp  FacadeInterfaceNative.h  FacadeModele.cpp  FacadeModele.h
src/app/heavy-client/model/AffichageTexte/: AffichageTexte.cpp  AffichageTexte.h
src/app/heavy-client/model/Application/: FacadeModele.cpp  FacadeModele.h
src/app/heavy-client/model/Arbre/: ArbreRendu.cpp  ArbreRendu.h  ArbreRenduINF2990.cpp  ArbreRenduINF2990.h
src/app/heavy-client/model/Capteur/: SuiveurLigne.h
src/app/heavy-client/model/ControleRobot/: ControleRobot.cpp
src/app/heavy-client/model/Interface/: FacadeInterfaceNative.cpp  FacadeInterfaceNative.h
src/app/heavy-client/model/MachineAEtats/: EtatAbstrait.cpp  EtatAbstrait.h  EtatCreationLigne.cpp  EtatCreationLigne.h  EtatCreationPoteau.cpp  EtatCreationPoteau.h  EtatCreationTeleporteur.cpp  EtatCreationTeleporteur.h  EtatDeplacement.cpp  EtatDuplication.cpp  EtatLoupe.h  EtatMiseAEchelle.cpp  EtatRotation.h
src/app/heavy-client/model/MachineAModes/: ModeAbstrait.h  ModeEdition.cpp  ModeEdition.h  ModeMapSelection.h  ModePersonalize.cpp  ModePersonalize.h  ModeSimulation.cpp  ModeTest.cpp  ModeTutorialEdition.cpp  ModeTutorialEdition.h  ModeTutorialSimulation.cpp  ModeTutorialSimulation.h  ModeTypes.h
src/app/heavy-client/model/Physique/: CercleEnglobant.cpp
src/app/heavy-client/model/ProfilUtilisateur/: ApplicationSettings.cpp  ApplicationSettings.h  ProfilUtilisateur.cpp  ProfilUtilisateur.h
src/app/heavy-client/model/Tests/: BancTests.cpp  PhysiqueTest.cpp  ProfilUtilisateurTest.h
src/app/heavy-client/model/Visiteur/: VisiteurAbstrait.cpp  VisiteurAbstrait.h  VisiteurDeplacement.cpp  VisiteurDetectionRobot.cpp  VisiteurDetectionRobot.h  VisiteurDuplication.h  VisiteurMiseAEchelle.cpp  VisiteurMiseAEchelle.h  VisiteurRotation.cpp  VisiteurSauvegarde.cpp  VisiteurSauvegarde.h  VisiteurVerificationQuad.cpp
src/app/heavy-client/model/client-network/: Connection.cpp  Connection.h  MessageDispatcher.cpp  MessageDispatcher.h  NetworkManager.cpp  NetworkManager.h  Serializer.cpp  Serializer.h
src/app/heavy-client/model/edition-tools/: EtatAbstrait.cpp  EtatCreationLigne.cpp  EtatCreationLigne.h  EtatCreationMur.cpp  EtatCreationMur.h  EtatCreationPoteau.cpp  EtatCreationPoteau.h  EtatCreationTeleporteur.cpp  EtatCreationTeleporteur.h  EtatDeplacement.cpp  EtatDeplacement.h  EtatDuplication.cpp  EtatDuplication.h  EtatLoupe.cpp  EtatMiseAEchelle.cpp  EtatMiseAEchelle.h  EtatRotation.cpp  EtatRotation.h  EtatSelection.cpp  EtatSelection.h  EtatTypes.h  OnlineTool.cpp  OnlineTool.h
src/app/heavy-client/model/event-handler/: EventHandler.cpp  EventHandler.h  LocalEvent.cpp  LocalEvent.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h
src/app/heavy-client/model/modes/: ModeAbstrait.cpp  ModeAbstrait.h  ModeCourse.cpp  ModeCourse.h  ModeEdition.cpp  ModeEdition.h  ModeMapSelection.cpp  ModeMenuPrincipal.cpp  (+15 more)
src/app/heavy-client/ui/: ChatWindow.Designer.cs  ColorSelector.Designer.cs  ColorSelector.cs  ColorSelector.resx  Configure.cs  ConnectToServer.Designer.cs  ConnectToServer.cs  ConnectToServer.resx  CustomClass.cs  EditionMenuStrip.Designer.cs  EditionMenuStrip.cs  EditionSideMenu.Designer.cs  EditionSideMenu.cs  EditionSideMenu.resx  MainMenu.Designer.cs  MainMenu.cs  MainMenu.resx  MapMenu.resx  PersonnalisationSideMenu.Designer.cs  PersonnalisationSideMenu.cs  PersonnalisationSideMenu.resx  PopOutInterface.Designer.cs  PopOutInterface.cs  Program.cs  SimulationMenuStrip.Designer.cs  SimulationMenuStrip.cs  TestMenuStrip.Designer.cs  TestMenuStrip.cs  UserChat.Designer.cs  UserChat.cs  UserChat.resx  UserChatChannel.Designer.cs  UserChatChannel.cs  UserTabChat.Designer.cs  UserTabChat.cs  UserTabChat.resx  Window.Designer.cs  Window.cs  Window.resx  ui.csproj
src/app/heavy-client/ui-model-interface/: CMakeLists.txt
src/app/heavy-client/util/: CMakeLists.txt  Droite3D.cpp  Utilitaire.cpp
src/app/networkUtils/: CMakeLists.txt  Connection.cpp  ConnectionResolver.cpp  NetworkDisposal.cpp  NetworkFactory.cpp  NetworkLogger.cpp  NetworkObjects.cpp  NetworkStandard.cpp  ServerListener.cpp  TypeSerializerDeserializer.cpp
src/app/networkUtils/include/: Connection.h  ConnectionResolver.hpp  IOServiceWrapper.hpp  NetworkDisposal.h  NetworkFactory.h  NetworkLogger.h  NetworkObjects.h  NetworkStandard.h  Networking.h  ServerListener.hpp  TypeSerializerDeserializer.h
src/app/server/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionResolver.cpp  ConnectionResolver.hpp  MultiUserSession.cpp  MultiUserSession.h  NetworkLogger.cpp  ServerFacade.h  ServerListener.cpp  ServerListener.hpp  ServerStarter.cpp
src/app/server/ChatSystem/: ChatSystem.cpp  ChatSystem.h
src/app/server/Database/: BaseDatalist.cpp  BaseDatalist.h  Database.cpp  Database.h  DatalistElement.cpp  DatalistElement.h  IdGenerator.cpp  IdGenerator.h  MapDatabase.cpp  MapDatabase.h  MapFileDatabase.cpp  MapFileDatabase.h  UserDatabase.cpp  UserDatabase.h
src/app/server/MapSystem/: MapEditingSession.cpp  MapEditingSession.h  MapRoomManager.cpp  MapRoomManager.h  MapSystem.cpp  MapSystem.h
src/app/server/UserManagement/: MultiUserSession.cpp  MultiUserSession.h  MultiUserSystem.cpp  MultiUserSystem.h  User.cpp  User.h  UserAuthLobby.cpp  UserAuthLobby.h
src/app/server/include/: NetworkLogger.h  Networking.h  ServerListener.hpp
src/app/server/map-management/: MapRoomManager.cpp  MapRoomManager.h
src/app/server/message-dispatcher/: MessageDispatcher.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h
src/client/heavy/: CMakeLists.txt
src/client/heavy/model/: CMakeLists.txt
src/client/heavy/ui/: Configure.cs  InterfaceGraphique.csproj  Program.cs  Window.Designer.cs  Window.cs
src/client/heavy/util/: CMakeLists.txt
src/prototype/heavy-client/model/: CMakeLists.txt
src/prototype/server/: CMakeLists.txt  ChatSession.cpp  ChatSession.hpp  ServerStarter.cpp  User.cpp  User.hpp
(+5955 files in other folders)
